# topic-generation

./: .gitignore  README.md  requirements.txt
code/: _run.sh  main.py  market_market_generation.py  market_per_market_analysis.py  technology_function.py  technology_mechanism.py  technology_principle.py  technology_requirement.py  utils.py
prompt/: market_market_generation.txt  market_resolution_problem_per_market.txt  market_resolution_problem_per_market_selfprompt.txt  market_usecase_per_market.txt  market_usecase_per_market_with_function.txt  technology_function.txt  technology_mechanism_L1.txt  technology_mechanism_L23.txt  technology_mechanism_selfprompt.txt  technology_principle.txt  technology_principle_selfprompt.txt  technology_requirement_L1.txt  technology_requirement_L23.txt  technology_requirement_selfprompt.txt  translate_to_japanese.txt
vector_db/: .gitignore
vector_db/qdrant/: .gitignore  create_network.py  insert_qdrant.py  insert_qdrant_hybrid.py  query.py  requirements.txt
vector_db/qdrant/lib/: dbclient.py  fact_check.py  generate_description.py  generate_functions.py  generate_industry.py  generate_needs.py  generate_topics.py  llm.py  rag.py  recommend_market.py  recommend_ryudo.py  test.py
vector_db/qdrant/prompt/: enhance_query.txt  enhance_vectordb_query.txt  generate_enhance_query.txt  generate_functions.txt  generate_market_functions.txt  generate_market_needs_functions.txt  (+8 more)
vector_db/word2vec/: .gitignore  README.md  pyproject.toml  transform.py  transform_v2.py  transform_v3_dense.py  transform_v3_hybrid.py  transform_v3_sparse.py
(+3 files in other folders)
