[tool.poetry]
name = "word2vec"
version = "0.1.0"
description = ""
authors = ["kemkemG0 <kenshin.jpsdeveloper@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
sentence-transformers = "^2.2.2"
tqdm = "^4.66.1"
numpy = "^1.26.1"
matplotlib = "^3.8.0"
build = "^1.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
